--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,3 +1,3 @@
 <%= $player_2_name %> was attacked by <%= $player_1_name %>
 <br>
-<%= $player_2_name %>'s HP: <%= @new_player_2_score %>
+<%= $player_2_name %>'s HP: <%= $player_2.hit_points %>
