--- a/views/play.erb
+++ b/views/play.erb
@@ -1,7 +1,9 @@
-<%= $player_1_name %> vs <%= $player_2_name %>
+<%= @game.player1.name %> vs <%= @game.player2.name %>
 <br>
-<%= $player_2_name %>'s HP: <%= $player_2.hit_points %>
-
+<%= @game.player2.name %>'s HP: <%= @game.player1.hit_points %>
+<br>
+<%= @game.turn.name %>'s turn
+<br>
 <form action = /attack-result method = post>
-  <input type = "submit" value = "Attack Player 2!">
+  <input type = "submit" value = "Attack <%= @game.player2.name %>!">
 </form>
